package com.myriadcode.languagelearner.common.ids;

public record UserId(String id) {
}
